--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,10 @@ platform = espressif8266
 board = d1
 framework = arduino
 upload_port = /dev/ttyUSB0
+monitor_speed = 115200
+monitor_port = /dev/ttyUSB0
 lib_deps = 
 	fmalpartida/LiquidCrystal@^1.5.0
 	arduino-libraries/NTPClient@^3.2.1
 	adafruit/DHT sensor library@^1.4.6
+	bblanchon/ArduinoJson@^7.4.1
